--- a/index.html
+++ b/index.html
@@ -46,16 +46,19 @@
         <div class="container mx-auto flex justify-between items-center px-4">
             <div class="flex items-center space-x-4">
                 <a href="index.html">
-                    <img alt="Ape Shop Logo" class="h-16" src="logo.png" />
+                    <img alt="Ape Shop Logo" class="h-100" height="10" src="logo.png" width="80" />
                 </a>
                 <a href="https://www.instagram.com/catatansemenit/profilecard/?igsh=aGh6MTRlNzV2aXdh">
-                    <i class="fab fa-instagram text-black text-xl"></i>
+                    <i class="fab fa-instagram text-black text-xl">
+                    </i>
                 </a>
                 <a href="https://www.tiktok.com/@catatan.semenit?_t=8rR3iZytGRU&_r=1">
-                    <i class="fab fa-tiktok text-black text-xl"></i>
+                    <i class="fab fa-tiktok text-black text-xl">
+                    </i>
                 </a>
                 <a href="x.html">
-                    <i class="fab fa-twitter text-black text-xl"></i>
+                    <i class="fab fa-twitter text-black text-xl">
+                    </i>
                 </a>
             </div>
             <div class="relative">
